# csgo_dont_blind_me

./: .gitignore  INSTALL.txt  README.md  app.py  build.bat  ddc_ci.py  file_copier.py  frozen.py  gamestate_integration_dont_blind_me.cfg  gamestate_integration_dont_blind_me.cfg.template  lock_gamma_range.reg  monitor.py  requirements.txt  set_max_gamma_range.reg  settings.ini.default  settings.json  unlock_gamma_range.reg
gamma/: __init__.py  calibration.py  context.py  context_quartz.py  context_vidmode.py  context_wingdi.py  gamma_quartz.py  gamma_vidmode.py  gamma_wingdi.py  ramp.py
hook/: .gitignore  CMakeLists.txt  __init__.py  hook.c  hook.py  hook32.def  hook64.def  inject.py
